# crypto-trading-bot

./: .gitignore  .pre-commit-config.yaml  BRANCH_CLEANUP_GUIDE.md  CLAUDE.MD  CLAUDE.md  CLEANUP_REPORT.md  FOREX_OPTIMIZATION_REPORT.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  OPTIMIZATION_RESULTS.md  PAPER_TRADING_PLAN.md  README.md  RESUMEN_EJECUTIVO_FOREX.md  STATUS_REPORT.py  STRATEGY_ANALYSIS.md  backtest_results_2025.md  backtest_strategies.py  cli_dashboard.py  comprehensive_optimization.py  examples_usage.py  export_optimized_params.py  forex_best_params_20260126_154015.json  forex_best_params_20260126_154943.json  optimize_best_strategies.py  optimize_forex_strategies.py  optimized_strategies_config.py  optimized_strategies_config.yaml  paper_trading_forex.py  paper_trading_results_USDJPY_20260126_192540.json  pyproject.toml  quick_strategy_test.py  requirements-dev.txt  requirements.txt  run_all_optimizers.py  run_dashboard.bat  run_optimize_and_validate.py  start_system.sh  test_forex_strategy.py  test_integration.py  (+2 more)
backend/: .env.example  README.md  alembic.ini  check_backend.py  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: ac9ef86de3da_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: auth.py  (+2 more)
backtesting/: engine.py
config/: settings.py
data/: base_provider.py  cache.py  downloader.py  forex_data.py  yfinance_downloader.py
data/downloadedData/: BNBUSDT_15m.csv  BTCUSDT_15m.csv  BTCUSDT_1h.csv  ETHUSDT_15m.csv  ETHUSDT_1h.csv  SOLUSDT_15m.csv
data/sentiment/: fear_greed.py
docs/: ARCHITECTURE.md  NEW_ARCHITECTURE.md  PROYECTO_COMPLETO.txt  QUICKSTART.md  READY_TO_LAUNCH.md  RESUMEN_EJECUTIVO.md  SETUP.md
docs/docs_new/: INDICE.md
examples/: __init__.py  download_forex_data.py  forex_backtest.py  forex_optimization.py
execution/: paper_broker.py
frontend/: .env.example  README.md  index.html  package.json
frontend/src/: App.css  App.jsx  index.css
optimization/: base_optimizer.py  generic_optimizer.py  optimize_bollinger.py  optimize_ict.py  optimize_keltner_sol15m.py  optimize_macd_adx.py  optimize_macd_adx_eth.py  optimize_smart_money.py  optimize_supertrend.py
reporting/: summary.py
scripts/: backtest_2025.py  backtest_forex.py  backtest_strategies.py  check_backend.py  paper_runner_multi.py  start_system.sh
src/: __init__.py
src/adapters/: __init__.py
src/core/: __init__.py  types.py
src/crypto_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
strategies/: ai_strategy.py  base.py  bollinger_mean_reversion.py  composite_strategy.py  garch_strategy.py  ict_strategy.py  kama_strategy.py  keltner_breakout_strategy.py  ma_rsi_strategy.py  macd_adx_trend_strategy.py  mean_reversion_strategy.py  multi_tf_strategy.py  order_flow_strategy.py  pairs_trading_strategy.py  registry.py  smart_money_strategy.py  squeeze_momentum_strategy.py  supertrend_strategy.py  volume_profile_strategy.py  vwap_strategy.py  wyckoff_strategy.py
strategies/archived/: bb_trend_strategy.py
test/: FUNCTIONALITY_TEST_REPORT.md  test_bot.sh
tests/: conftest.py  test_ai_strategy.py  test_all_strategies.py  test_auth.py  test_backtester.py  test_dashboard.py  test_engine.py  test_health.py  test_new_architecture.py  test_paper_trading.py  test_strategies.py  test_validation.py
tests/integration/: test_integration.py
utils/: logger.py  risk.py  validation.py
validation/: validate_bollinger.py  validate_ict.py  validate_keltner.py  validate_macd_adx.py  validate_smart_money.py  validate_supertrend.py
visualization/: interactive_chart.py
(+84 files in other folders)
