# pyproject.toml
# Project configuration for crypto-trading-bot

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trading-bot"
version = "1.0.0"
description = "AI-powered cryptocurrency trading bot with multiple strategies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Crypto Trading Bot Team"}
]
keywords = ["trading", "cryptocurrency", "backtesting", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "aiodns>=3.5.0",
    "aiohttp>=3.13.0",
    "ccxt>=4.5.0",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.2.0",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "scikit-learn>=1.5.0",
    "ta>=0.11.0",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "bandit>=1.7.0",
]

[project.scripts]
trading-bot = "cli_dashboard:main"

[project.urls]
Repository = "https://github.com/alvaroSaavedraCalero/crypto-trading-bot"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["strategies", "backtesting", "optimization", "utils", "data", "config"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_gitignore = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["strategies", "backtesting", "optimization", "utils"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/archived/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "tests/",
    "archived/",
    "build/",
]

[[tool.mypy.overrides]]
module = [
    "ta.*",
    "ccxt.*",
    "sklearn.*",
]
ignore_missing_imports = true

# bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "archived"]
skips = ["B101", "B311"]  # Skip assert and random warnings

# pydocstyle configuration
[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]
